<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:id="@+id/toucher"
    tools:context="com.adeel.foodsurfing.Login_SignUp">

    <com.adeel.foodsurfing.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/skip_text_underlined"
        android:padding="10dp"
        android:textSize="15dp"
        android:textColor="@color/back2"
        android:fontFamily="sans-serif-light"
        />

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:id="@+id/mainlogo"/>

    <ImageButton
        android:background="@android:color/transparent"
        android:src="@mipmap/loginwithfacebookbutton"
        android:id="@+id/facebooklogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:padding="5dp"
        android:gravity="center"
        android:hint="info@foodsurfing.eu"
        android:textSize="13dp"
        android:textColorHint="@color/safe_mode_text"
        android:textColor="@android:color/white"
        android:background="@mipmap/inputfields"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:id="@+id/emailtext"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebooklogin"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:padding="5dp"
        android:gravity="center"
        android:textSize="13dp"
        android:textColorHint="@color/safe_mode_text"
        android:textColor="@android:color/white"
        android:background="@mipmap/inputfields"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:id="@+id/emailpass"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtext"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_below="@+id/emailpass"
        android:background="@android:color/transparent"
        android:src="@mipmap/signinbutton"
        android:layout_marginTop="50dp"
        android:id="@+id/signinbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/forgotpassword"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="12dp"
            android:layout_above="@+id/signupbutton"
            android:layout_centerHorizontal="true"
            android:text="@string/forgotpasswordtext"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/signupbutton"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="12dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signuptext"
            android:fontFamily="sans-serif-light"/>
    </RelativeLayout>

    <com.facebook.login.widget.LoginButton
        android:visibility="invisible"
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <RelativeLayout
        android:visibility="gone"
        android:padding="2dp"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonbackground3"
        android:id="@+id/progresslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminateDrawable="@drawable/progress"/>

        <ProgressBar
            android:id="@+id/two"
            android:padding="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminateDrawable="@drawable/progress2"/>

        <com.adeel.foodsurfing.CustomTextView
            app:customFont="fonts/Lato-Regular.ttf"
            android:gravity="center"
            android:textSize="16dp"
            android:text="Signing in!"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/progressstatus"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/one"
            android:layout_toRightOf="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="70dp" />

    </RelativeLayout>

</RelativeLayout>


