<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.adeel.foodsurfing.ChooseLocationFragment">

    <RelativeLayout
        android:id="@+id/rester"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.adeel.foodsurfing.CustomTextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/heading"
                android:text="Wähle Deinen gewünschten Standort"
                android:textSize="60dp"
                android:gravity="center"
                app:customFont="fonts/AmaticSC-Bold.ttf"
                android:textColor="@color/back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />

            <RelativeLayout
                android:id="@+id/first"
                android:visibility="visible"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:textColor="@color/back1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourcitytext"
                    android:textSize="14dp"
                    android:text="Stadt"
                    />

                <EditText
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColorHint="@color/location_text_box"
                    android:textColor="@color/location_text_box"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/yourcitydata"
                    android:layout_below="@+id/yourcitytext"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/inputtextfield" />

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/back1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postboxtext"
                    android:textSize="14dp"
                    android:layout_below="@+id/yourcitydata"
                    android:text="Postleitzahl"
                    />

                <EditText
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColorHint="@color/location_text_box"
                    android:textColor="@color/location_text_box"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/postboxdata"
                    android:layout_below="@+id/postboxtext"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/inputtextfield"/>


                <RelativeLayout
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_below="@+id/postboxdata"
                    android:background="@drawable/location"
                    android:layout_marginTop="50dp"
                    android:id="@+id/othloclayout"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true">

                    <com.adeel.foodsurfing.CustomTextView
                        app:customFont="fonts/Lato-Regular.ttf"
                        android:id="@+id/othloclayouttext"
                        android:textSize="18dp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Suche nach Standort"
                        android:textColor="@android:color/white"/>

                </RelativeLayout>

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:layout_margin="10dp"
                    android:textColor="@color/back1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orr"
                    android:textSize="14dp"
                    android:layout_below="@+id/othloclayout"
                    android:text="Oder"
                    />

                <RelativeLayout
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_below="@+id/orr"
                    android:background="@drawable/location"
                    android:id="@+id/curloclayout"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true">

                    <com.adeel.foodsurfing.CustomTextView
                        app:customFont="fonts/Lato-Regular.ttf"
                        android:id="@+id/curloclayouttext"
                        android:textSize="18dp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Suche nach aktuellem Standort"
                        android:textColor="@android:color/white"/>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/second"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:textSize="15dp"
                    android:layout_margin="20dp"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:text="@string/noloc"
                    android:id="@+id/nolocfirst"/>

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:id="@+id/nolocsecond"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/noloc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/nolocfirst"/>

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:text="@string/thelink"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/back1"
                    android:textSize="15dp"
                    android:id="@+id/nolocthird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nolocsecond"
                    android:layout_centerHorizontal="true"/>

                <com.adeel.foodsurfing.CustomTextView
                    app:customFont="fonts/Lato-Regular.ttf"
                    android:layout_below="@+id/nolocthird"
                    android:text="klicken Sie hier, um es nochmals zu versuchen."
                    android:layout_marginTop="100dp"
                    android:textColor="@color/back2"
                    android:background="@color/back1"
                    android:textSize="15dp"
                    android:padding="15dp"
                    android:gravity="center"
                    android:id="@+id/nolocfourth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
    </RelativeLayout>
</ScrollView>
